improve sp related output descriptor and psbt behaviour