@@ -26,9 +26,9 @@ public class HwAirgappedController extends KeystoreImportDetailController {
 
     public void initializeView() {
         List<KeystoreFileImport> fileImporters = Collections.emptyList();
-        if(getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE)) {
+        if(getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE_HD)) {
             fileImporters = List.of(new ColdcardSinglesig(), new CoboVaultSinglesig(), new Jade(), new KeystoneSinglesig(), new PassportSinglesig(), new SeedSigner(), new GordianSeedTool(), new SpecterDIY(), new Krux(), new AirGapVault(), new KeycardShellSinglesig());
-        } else if(getMasterController().getWallet().getPolicyType().equals(PolicyType.MULTI)) {
+        } else if(getMasterController().getWallet().getPolicyType().equals(PolicyType.MULTI_HD)) {
             fileImporters = List.of(new Bip129(), new ColdcardMultisig(), new CoboVaultMultisig(), new JadeMultisig(), new KeystoneMultisig(), new PassportMultisig(), new SeedSigner(), new GordianSeedTool(), new SpecterDIY(), new Krux(), new KeycardShellMultisig());
         }
 
@@ -41,7 +41,10 @@ public class HwAirgappedController extends KeystoreImportDetailController {
             }
         }
 
-        List<KeystoreCardImport> cardImporters = List.of(new Tapsigner(), new Satochip(), new Satschip(), new Keycard());
+        List<KeystoreCardImport> cardImporters = Collections.emptyList();
+        if(getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE_HD) || getMasterController().getWallet().getPolicyType().equals(PolicyType.MULTI_HD)) {
+            cardImporters = List.of(new Tapsigner(), new Satochip(), new Satschip(), new Keycard());
+        }
         for(KeystoreCardImport importer : cardImporters) {
             if(!importer.isDeprecated() || Config.get().isShowDeprecatedImportExport()) {
                 CardImportPane importPane = new CardImportPane(getMasterController().getWallet(), importer, getMasterController().getDefaultDerivation(), getMasterController().getRequiredDerivation());
